<resources>
    <string name="app_name">My Application</string>
    <string name="todo">TODO</string>
    <string name="drive">Drive</string>
    <string name="start">Start</string>
    <string name="result_label">Result Label</string>
    <string name="semafor">Semafor</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="goracing">GoRacing</string>
    <string name="todo">TODO</string>
</resources>